# astronomy_hackathon_2025

./: README.md  launch.py  requirements.txt  run.py  test_pyqt.py
backend/comet_mass/: CMakeLists.txt
backend/comet_mass/src/: comet_mass.cpp  constants.h
backend/comet_mass/tests/: test_mass.cpp
backend/comet_size/core/: calculator.py  fits_reader.py
backend/comet_size/tests/: test_size.py
backend/shared/: error_handling.py  file_utils.py
frontend/: front.py
test-fits/: example.fits  fits.py
